...

    <Spinner
        android:id="@+id/u_roleSpinner"
        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
        android:layout_width="125dp"
...
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="My Profile"
        android:textAlignment="textStart"
        android:textColor="@color/dark_purple"
...

            <ImageView
                android:id="@+id/E_profile_editBtn"
                android:layout_width="54dp"
                android:layout_height="54dp"
...

            <Button
                android:id="@+id/E_profile_uploadImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/dark_purple"
                android:text="Delete Image"
                android:textColor="@color/light_purple"
                android:visibility="gone"
...
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Name:"
                android:textColor="@color/dark_purple"
                android:textSize="20sp"
...

            <EditText
                android:id="@+id/E_profile_textName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                android:focusableInTouchMode="false"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="Moo Deng"
                android:inputType="text"
                android:textColor="@color/dark_purple"
...
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Pronouns:"
                android:textColor="@color/dark_purple"
                android:textSize="20sp"
...

            <EditText
                android:id="@+id/E_profile_textPronouns"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                android:focusableInTouchMode="false"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="she/they"
                android:inputType="text"
                android:textColor="@color/dark_purple"
...
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Phone:"
                android:textColor="@color/dark_purple"
                android:textSize="20sp"
...
                app:layout_constraintHorizontal_bias="0.255"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/E_profile_textEmail" />

            <EditText
                android:id="@+id/E_profile_textPhone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                android:focusableInTouchMode="false"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="123 456 7890"
                android:inputType="phone"
                android:textColor="@color/dark_purple"
...
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Email:"
                android:textColor="@color/dark_purple"
                android:textSize="20sp"
...
                android:focusableInTouchMode="false"
                android:fontFamily="@font/roboto_mono_medium"
                android:hint="moodeng@ualberta.ca"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_purple"
...

            <CheckBox
                android:id="@+id/E_profile_gps_dec"
                android:layout_width="203dp"
                android:layout_height="48dp"
...
                android:checked="true"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Allow Geolocation"
                android:textColor="@color/dark_purple"
                app:layout_constraintBottom_toBottomOf="parent"
...
                app:layout_constraintHorizontal_bias="0.342"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/E_profile_notification_dec"
                app:layout_constraintVertical_bias="0.0" />

...
                android:focusableInTouchMode="false"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Allow Notifications"
                android:textColor="@color/dark_purple"
                app:layout_constraintEnd_toEndOf="parent"
...

            <Button
                android:id="@+id/E_profile_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_marginBottom="135dp"
                android:backgroundTint="@color/dark_purple"
                android:text="Update"
                android:textColor="@color/light_purple"
                android:visibility="gone"
...
