...
    <item
        android:id="@+id/u_scanQR_menu_item"
        android:icon="@drawable/nav_ic_barcode"
        android:title=""/>

    <item
        android:id="@+id/u_profile_menu_item"
        android:icon="@drawable/nav_ic_user"
        android:title=""/>

</menu>
