...
        <action
            android:id="@+id/action_u_scanQR_menu_item_to_eventFragment2"
            app:destination="@id/u_eventFragment" />
    </fragment>

    <fragment
        android:id="@+id/u_profile_menu_item"
        android:name="com.example.pygmyhippo.user.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/user_fragment_profile"
        android:background="@color/dark_purple">
        <argument
            android:name="signedInAccount"
...
        <argument
            android:name="signedInAccount"
            app:argType="com.example.pygmyhippo.common.Account" />
        <argument
            android:name="currentRole"
            app:argType="string"
            android:defaultValue="organiser" />
    </activity>

    <activity
        android:id="@+id/a_mainActivity"
        android:name="com.example.pygmyhippo.MainActivity"
        android:label="Admin Main Activity"
...
