...
            <TextView
                android:id="@+id/o_editevent_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="Event Details"
                android:textColor="@color/title_text"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/o_editEvent_name"
...
